<resources>
    <string name="app_name">MyBMI</string>
    <string name="bmi_hello">哈囉!BMI</string>
    <string name="bmi_height">身高 (cm)</string>
    <string name="bmi_weight">體重 (kg)</string>
    <string name="bmi_btn">計算BMI值</string>
    <string name="bmi_result">你的BMI值是</string>
    <string name="advice_light">你該多吃點</string>
    <string name="advice_average">體型很棒喔!</string>
    <string name="advice_heavy">你該節食了</string>
    <string name="Gender">性別</string>
    <string name="Error_code">錯誤 (請確認您的體重與身高是否正確)</string>
    <string-array name="gender">
        <item>Gentleman</item>
        <item>Lady</item>
        <item>Others</item>
    </string-array>
</resources>